# DeA_reader

./: CMakeLists.txt  Dockerfile  README.md  deaprotocol.c  deaprotocol.h  docker-compose.yml  hidapi.h  main.c  sysdefs.h  wvutils.c
